--- a/node-mongo/package.json
+++ b/node-mongo/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "week5day3_lab",
+  "name": "node-mongo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start":"node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
